Initialize and populate pokemonList array with sample data

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <!-- Adding a container for the Pokémon list for better styling -->
+    <div id="pokemon-container">
+        <h1>Pokémon List</h1>
+    </div>
+
     <script src="js/scripts.js"></script>
 </body>
 </html>
