Finalized project with updated UI and enhanced functionality

--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js Showcase App</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title>Pokémon List</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <!-- Adding a container for the Pokémon list for better styling -->
-    <div id="pokemon-container">
-        <h1>Pokémon List</h1>
-    </div>
-
-    <script src="js/scripts.js"></script>
+    <div id="pokemon-container"></div>
+    <script src="scripts.js"></script>
 </body>
 </html>
+
